# clipper

./: .envrc.nix.sample  .envrc.no-nix.sample  .gitignore  Cargo.toml  Makefile  README.md  flake.lock.license  flake.nix  package.nix  pcapng.pk  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
.reuse/: dep5
clipper/: Cargo.toml
clipper/src/: capture.rs  devtools.rs  main.rs
clipper_dump/: Cargo.toml
clipper_dump/src/: capture.rs  chomp.rs  devtools.rs  main.rs  tcp_reassemble.rs
clipper_inject/: Cargo.toml
clipper_inject/src/: lib.rs  log_target.rs  preload.rs  rpc.rs
clipper_inject/src/hooks/: dlopen.rs  mod.rs  openssl.rs  rustls.rs
crates/anon_packets/: Cargo.toml
crates/anon_packets/src/: lib.rs
crates/clipper_protocol/: Cargo.toml  build.rs
crates/clipper_protocol/proto/: embedding.proto
crates/clipper_protocol/src/: lib.rs
crates/decrypt/: Cargo.toml
crates/devtools_server/: Cargo.toml
crates/devtools_server/src/: lib.rs
crates/hexdump/: Cargo.toml
crates/hexdump/src/: lib.rs
crates/libclipper/: Cargo.toml
crates/libclipper/src/: lib.rs
crates/libclipper/tests/integration/: main.rs  support.rs  tests.rs
crates/libfixture/: Cargo.toml
crates/libfixture/src/: lib.rs
crates/misc/: Cargo.toml
crates/misc/src/: lib.rs
crates/net_decode/: Cargo.toml
crates/net_decode/corpus/: http-80.pcapng  http-conn-reuse.pcapng  http.pcapng  http2-big-headers.pcapng  http2-conn-reuse.pcapng  nya-dsb.pcapng  tls13-session-resumption.pcapng
crates/net_decode/src/: chomp.rs  dispatch.rs  http.rs  key_db.rs  lib.rs  listener.rs  tcp_reassemble.rs  test_support.rs  tls.rs
crates/net_decode/src/test_output/http/: h1_conn_reuse  h1_simple  h1_unencrypted  h2  h2_header_continuation
crates/net_decode/src/test_output/tls/: h2  nya_dsb_inorder  nya_dsb_reordered  tls13_session_resumption
crates/net_decode/src/testdata/: sslkeylog.txt
crates/wire_blahaj/: Cargo.toml
crates/wire_blahaj/src/: lib.rs  pcap_writer.rs  unprivileged.rs
docs/: implementation_cargo.md  implementation_rustls.md
fixtures/dlopen-openssl-fixture/: Cargo.toml
fixtures/dlopen-openssl-fixture/src/: main.rs
fixtures/openssl-fixture/: Cargo.toml
fixtures/openssl-fixture/src/: contents.rs  lib.rs  main.rs
fixtures/rustls-fixture/: Cargo.toml
fixtures/rustls-fixture/src/: main.rs
h2-intercept/: Cargo.toml
h2-intercept/examples/: akamai.rs  client.rs  server.rs
h2-intercept/src/: client.rs  lib.rs  server.rs  share.rs
rustls-intercept/fuzz/fuzzers/: client.rs  deframer.rs  fragment.rs  message.rs  persist.rs  server.rs
rustls-intercept/rustls/: Cargo.toml
rustls-intercept/rustls/benches/: benchmarks.rs
rustls-intercept/rustls/examples/internal/: bench.rs  bogo_shim.rs
rustls-intercept/rustls/src/: builder.rs  check.rs  common_state.rs  lib.rs  record_layer.rs
rustls-intercept/rustls/src/client/: client_conn.rs
rustls-intercept/rustls/src/server/: server_conn.rs
rustls-intercept/rustls/src/tls13/: key_schedule.rs
rustls-intercept/rustls/tests/: api.rs  client_cert_verifier.rs  key_log_file_env.rs  server_cert_verifier.rs
rustls-intercept/rustls/tests/common/: mod.rs
