# SPDX-FileCopyrightText: 2023 Jade Lovelace
#
# SPDX-License-Identifier: MPL-2.0

[workspace]
members = ["clipper_inject", "crates/*", "rustls-intercept/rustls", "h2-intercept", "clipper", "fixtures/*"]
resolver = "2"

[patch.crates-io]
pcap-parser = { git = "https://github.com/lf-/pcap-parser", branch = "jade/fix-options-correctly" }
