# SPDX-FileCopyrightText: 2023 Jade Lovelace
#
# SPDX-License-Identifier: MPL-2.0

[workspace]
members = ["clipper_inject", "crates/*", "rustls-intercept/rustls", "h2-intercept", "clipper", "fixtures/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MPL-2.0"
homepage = "https://github.com/lf-/clipper"
repository = "https://github.com/lf-/clipper"
edition = "2021"

[workspace.dependencies]
pcap-parser = "0.14.1"
