# SPDX-FileCopyrightText: 2023 Jade Lovelace
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "clipper"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anon_packets = { version = "0.1.0", path = "../crates/anon_packets" }
clap = { version = "4.3.19", features = ["derive"] }
libclipper = { path = "../crates/libclipper" }
net_decode = { version = "0.1.0", path = "../crates/net_decode" }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.2.0"
