[package]
name = "clipper_dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
hexdump = { version = "0.1.0", path = "../crates/hexdump" }
pcap-parser = "0.14.0"
pktparse = "0.7.1"
tls-parser = "0.11.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
