[package]
name = "clipper_dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
chrono = "0.4.26"
clap = { version = "4.3.2", features = ["derive"] }
devtools_server = { version = "0.1.0", path = "../crates/devtools_server" }
futures = "0.3.28"
hexdump = { version = "0.1.0", path = "../crates/hexdump" }
http = "0.2.9"
net_decode = { version = "0.1.0", path = "../crates/net_decode" }
pcap-parser = "0.14.0"
pktparse = "0.7.1"
serde = "1.0.164"
serde_json = "1.0.97"
tls-parser = "0.11.0"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.2.0"
