# SPDX-FileCopyrightText: 2023 Jade Lovelace
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "clipper_inject"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipper_protocol = { version = "0.1.0", path = "../crates/clipper_protocol" }
ctor = "0.2.2"
# auto-download is deeply personally offensive, however, it is way faster to
# get working than to use nix (which will make it impossible to inject to Arch
# binaries) or make a reasonable arch package
# frida-gum = { version = "0.12.0", features = ["auto-download"] }
frida-gum = { version = "0.12.0" }
hex = "0.4.3"
lazy_static = "1.4.0"
libc = "0.2.145"
misc = { version = "0.1.0", path = "../crates/misc" }
regex = "1.8.4"
rustc-demangle = { version = "0.1.23", features = ["std"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["net"] }
tokio-util = "0.7.8"
tonic = "0.9.2"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
