# SPDX-FileCopyrightText: 2023 Jade Lovelace
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "devtools_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromiumoxide_cdp = { git = "https://github.com/lf-/chromiumoxide", branch = "jade/serialize" }
chromiumoxide_types = { git = "https://github.com/lf-/chromiumoxide", branch = "jade/serialize" }
futures = "0.3.28"
hexdump = { version = "0.1.0", path = "../hexdump" }
serde = "1.0.164"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["rt"] }
tokio-tungstenite = "0.19.0"
tracing = "0.1.37"
