# SPDX-FileCopyrightText: 2023 Jade Lovelace
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "net_decode"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
dyn-clone = "1.0.12"
futures = "0.3.28"
h2-intercept = { path = "../../h2-intercept", features = ["stream", "unstable"] }
hex = "0.4.3"
hexdump = { version = "0.1.0", path = "../hexdump" }
http = "0.2.9"
httparse = "1.8.0"
misc = { version = "0.1.0", path = "../misc" }
pcap-parser = { workspace = true }
pktparse = "0.7.1"
rustls-intercept = { version = "0.21.1", path = "../../rustls-intercept/rustls" }
thiserror = "1.0.40"
tokio = "1.29.1"
tracing = "0.1.37"

[dev-dependencies]
expect-test = "1.4.1"
proptest = "1.2.0"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
