# SPDX-FileCopyrightText: 2023 Jade Lovelace
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "wire_blahaj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hexdump = { version = "0.1.0", path = "../hexdump" }
nix = "0.26.2"
pcap-parser = { version = "0.14.0", features = ["serialize"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["net"] }
tracing = "0.1.37"

