# SPDX-FileCopyrightText: 2023 Jade Lovelace
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "rustls-fixture"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfixture = { version = "0.1.0", path = "../../crates/libfixture" }
rustls = "0.21.1"
rustls-pemfile = "1.0.3"
webpki-roots = "0.23.1"
